# yac

./: .clang-format  .flake8  .gitignore  .gitmodules  .style.yapf  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  Dockerfile.ubuntu_2204  LICENSE  Makefile  README.md  README.rst  pylintrc  tags
autocal/: CMakeLists.txt  package.xml
autocal/cmake/: FindSuiteSparse.cmake
autocal/include/autocal/: Estimator.hpp  Initializer.hpp  Map.hpp
autocal/src/: Estimator.cpp  Map.cpp
autocal/src/common/: AprilGrid.cpp  CalibData.cpp  Calibrator.cpp  Common.cpp  Core.cpp  Duration.cpp  EuRoC.cpp  NBT.cpp  Time.cpp  Transformation.cpp
autocal/src/cv/: CameraBase.cpp  EquidistantDistortion.cpp  RadialTangentialDistortion.cpp
autocal/src/error/: ImuError.cpp  MarginalizationError.cpp  PoseError.cpp  SpeedAndBiasError.cpp
autocal/src/param/: CameraParameterBlock.cpp  LocalParamizationAdditionalInterfaces.cpp  PoseLocalParameterization.cpp  PoseParameterBlock.cpp  SpeedAndBiasParameterBlock.cpp  TimeDelayParameterBlock.cpp
autocal/tests/: test_runner.cpp
autocal/tests/ceres/: EuRoCTestSetup.hpp  TestCalibReprojError.cpp  TestCalibrator.cpp  TestEstimator.cpp  TestImuError.cpp  TestInitializer.cpp  TestNBT.cpp
autocal/tests/common/: TestAprilGrid.cpp  TestTransformation.cpp
autocal/tests/cv/: TestPinhole.cpp
lib/: AprilGrid.cpp  AprilGrid.hpp  CMakeLists.txt  CalibCamera.cpp  CalibCamera.hpp  CalibData.cpp  CalibData.hpp  CalibTarget.cpp  CalibTarget.hpp  CalibView.cpp  CalibView.hpp  CameraChain.cpp  CameraChain.hpp  CameraGeometry.cpp  CameraGeometry.hpp  CameraModel.cpp  CameraModel.hpp  CameraResidual.hpp  Core.cpp  Core.hpp  ImuBuffer.cpp  ImuBuffer.hpp  ImuData.hpp  ImuError.cpp  ImuError.hpp  ImuGeometry.cpp  ImuGeometry.hpp  ImuParams.hpp  ImuState.cpp  ImuState.hpp  InertialError.cpp  InertialError.hpp  ParamBlock.cpp  ParamBlock.hpp  PoseLocalParameterization.cpp  PoseLocalParameterization.hpp  ReprojectionError.cpp  ReprojectionError.hpp  Residual.cpp  Residual.hpp  (+16 more)
lib/test_data/: calib_camera.yaml
yac/: CMakeLists.txt  aprilgrid.cpp  aprilgrid.hpp  calib_camera.cpp  calib_camera.hpp  calib_data.cpp  calib_data.hpp  calib_vicon_marker.hpp  core.cpp  package.xml  yac.hpp
yac/apps/: calib_camera.cpp  calib_stereo.cpp  validate_stereo.cpp
yac/configs/: calib-euroc.yaml  calib-kalibr.yaml  calib-results.yaml  calib-yac.yaml
yac/demo/: calib_camera.cpp  calib_euroc.cpp  calib_gimbal.cpp  calib_gimbal2.cpp  calib_info.cpp  calib_inspect.cpp  calib_mocap.cpp  calib_preprocess.cpp  calib_sandbox.cpp  calib_vi.cpp
yac/lib/: aprilgrid.cpp  aprilgrid.hpp  calib_cam.hpp  calib_camera.cpp  calib_camera.hpp  calib_data.cpp  calib_data.hpp  calib_errors.cpp  calib_errors.hpp  calib_loss.hpp  calib_mocap.cpp  calib_mocap.hpp  calib_mocap_marker.cpp  calib_mocap_marker.hpp  calib_mono.cpp  calib_mono.hpp  calib_nbt.cpp  calib_nbt.hpp  calib_nbv.cpp  calib_nbv.hpp  calib_params.cpp  calib_params.hpp  calib_residuals.cpp  calib_residuals.hpp  calib_sim.cpp  calib_sim.hpp  calib_stereo.cpp  calib_stereo.hpp  calib_stereo_inc.hpp  calib_target.cpp  calib_target.hpp  calib_vi.cpp  calib_vi.hpp  calib_vicon_marker.cpp  calib_vicon_marker.hpp  calib_views.cpp  calib_views.hpp  camchain.cpp  camchain.hpp  ceres_utils.cpp  (+18 more)
yac/lib/util/: aprilgrid.cpp  aprilgrid.hpp  ceres_utils.cpp  ceres_utils.hpp  config.cpp  config.hpp  core.cpp  core.hpp  cv.cpp  cv.hpp  data.cpp  data.hpp  euroc.hpp  fs.cpp  fs.hpp  net.cpp  sim.cpp  sim.cpp.hide  sim.hpp  sim.hpp.hide  timeline.cpp  timeline.hpp  util.hpp
yac/tests/: euroc_test_data.hpp  munit.hpp  test_aprilgrid.cpp  test_calib_camera.cpp  test_calib_data.cpp  test_calib_errors.cpp  test_calib_mocap.cpp  test_calib_mono.cpp  test_calib_nbt.cpp  test_calib_nbv.cpp  test_calib_residuals.cpp  test_calib_stereo.cpp  test_calib_stereo_inc.cpp  test_calib_vi.cpp  test_core.cpp  test_marg_error.cpp  test_reproj_error.cpp  test_solver.cpp
yac/tests/test_data/: calib_mocap-intel_d435i.yaml
yac/tests/util/: test_aprilgrid.cpp  test_core.cpp  test_cv.cpp  test_net.cpp
yac_ros/: CMakeLists.txt  calib_camera_node.cpp  calib_capture_node.cpp  calib_mocap_capture_node.cpp  calib_mocap_node.cpp  calib_mono_nbv_node.cpp  calib_mono_node.cpp  calib_mono_validate_node.cpp  calib_stereo_nbv_node.cpp  calib_stereo_node.cpp  calib_stereo_validate_node.cpp  calib_vicon_capture_node.cpp  calib_vicon_node.cpp  calib_vicon_validate_node.cpp  example_node.cpp  package.xml  ros.cpp  ros.hpp
yac_ros/config/: autocal.rviz  calib_euroc.yaml  calib_fpv_snapdragon.yaml  calib_imucam-euroc.yaml  calib_intel_d435i.yaml  calib_mocap-intel_d435i.yaml  calib_mocap-sotiris.yaml  calib_mocap.yaml  calib_pointgrey.yaml  calib_vicon-intel_d435i.yaml  calib_webcam.yaml  euroc-calib_camera.yaml  euroc-calib_imucam.yaml  intel_d435i-calib_camera.yaml  intel_d435i-calib_imucam.yaml  intel_d435i.yaml  yac.rviz
yac_ros/launch/: calib_camera.launch  calib_capture.launch  calib_imucam.launch  calib_intel_d435i.launch  calib_mocap.launch  calib_mocap_capture.launch  calib_mocap_inspect-intel_realsense.launch  calib_mocap_inspect.launch  calib_mono.launch  calib_mono_nbv.launch  calib_stereo.launch  calib_stereo_nbv.launch  calib_vicon.launch  intel_d435i-calib_camera.launch  intel_d435i-calib_imucam.launch  intel_d435i.launch  record_camera.launch  record_mocap.launch
yac_ros/models/aprilgrid/: aprilgrid.blend  aprilgrid.blend1  aprilgrid.dae
yac_ros/msgs/: CalibTarget.msg  CalibTargetMeasurement.msg  CalibTargetMeasurementSet.msg  CalibVI.msg  CameraParams.msg  Extrinsics.msg  ImuParams.msg
yac_ros/src/: calib_capture_node.cpp  calib_mono_nbv_node.cpp  calib_vi_smart_node.cpp  ros.cpp  ros.hpp  ros_calib.cpp  ros_calib.hpp  ros_utils.cpp  ros_utils.hpp
yac_ros/src/calib_vi/: Calibrator.cpp  Calibrator.hpp  CeresIterationCallback.hpp  Estimator.cpp  Estimator.hpp  Map.cpp  Map.hpp  NBT.hpp
yac_ros/src/nodes/: aprilgrid_node.cpp  calib_camera_node.cpp  calib_capture_node.cpp  calib_imucam_node.cpp  calib_mocap_capture_node.cpp  calib_mocap_inspect_node.cpp  (+18 more)
(+3183 files in other folders)
