<?xml version="1.0"?>
<package>
  <name>autocal</name>
  <version>0.0.1</version>
  <description>Auto-Calibration</description>
  <maintainer email="chutsu@gmail.com">Chris Choi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>yac</build_depend>
  <run_depend>yac</run_depend>
</package>
